--- a/login.html
+++ b/login.html
@@ -32,11 +32,14 @@
                         <div class="card text-white" style="border-radius: 1rem;">
                             <div class="card-body p-5 text-center">
                                 <div class="mt-md-2">
+                                    <!-- Logo and heading -->
                                     <div class="mx-auto mb-md-2">
                                         <img id="form-logo" src="./resources/logo.png" alt="FLickPicks logo" />
                                     </div>
                                     <h2 class="mb-2 text-uppercase">Login</h2>
-                                    <form method="post" action="login.php">
+
+                                    <!-- Login Form -->
+                                    <form method="post" action="php/login.php">
                                         <div class="form-outline form-white mb-4">
                                             <input type="email" id="typeEmailX" class="form-control form-control-lg" required placeholder="Email" />
                                         </div>
@@ -55,7 +58,5 @@
         </section>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/less" ></script>
-        
     </body>
 </html>
