--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,7 @@
                                         <img id="form-logo" src="./resources/logo.png" alt="FLickPicks logo" />
                                     </div>
                                     <h2 class="mb-2 text-uppercase">Sign Up</h2>
-                                    <form method="post" action="signup.php">
+                                    <form method="post" action="php/signup.php">
                                         <div class="form-outline form-white mb-4">
                                             <input type="email" id="email" class="form-control form-control-lg" required placeholder="Email" />
                                         </div>
