--- a/signup.html
+++ b/signup.html
@@ -37,11 +37,20 @@
                                     </div>
                                     <h2 class="mb-2 text-uppercase">Sign Up</h2>
                                     <form method="post" action="php/signup.php">
+                                        <div class="d-md-flex">
+                                            <div id="firstNameDiv" class="form-outline form-white mb-4">
+                                                <input type="text" id="firstName" class="form-control form-control-lg" required placeholder="First name" name="firstName" />
+                                            </div>
+                                            <div id="lastNameDiv" class="form-outline form-white mb-4">
+                                                <input type="text" id="lastName" class="form-control form-control-lg" required placeholder="Last name" name="lastName" />
+                                            </div>
+                                        </div>
+                                        
                                         <div class="form-outline form-white mb-4">
-                                            <input type="email" id="email" class="form-control form-control-lg" required placeholder="Email" />
+                                            <input type="email" id="email" class="form-control form-control-lg" required placeholder="Email" name="email" />
                                         </div>
                                         <div class="form-outline form-white mb-4">
-                                            <input type="password" id="password" class="form-control form-control-lg" required placeholder="Password" />
+                                            <input type="password" id="password" class="form-control form-control-lg" required placeholder="Password" name="password" />
                                         </div>
                                         <div class="form-outline form-white mb-4">
                                             <input type="password" id="confirm-password" class="form-control form-control-lg" required placeholder="Confirm Password" />
